--- a/index.html
+++ b/index.html
@@ -169,6 +169,17 @@
 	<nav>
 		<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>	
 		<ul>
+			<li><a href="https://www.facebook.com/maszk.ch/" target="_blank">
+                   			<img src="media/contact/fb-gold.png" alt="facebook" id="fb">
+        			</a></li>
+			<li><a href="https://www.instagram.com/maszk.ch/" target="_blank">
+                    			<img src="media/contact/ig-gold.png" alt="instagram" id="ig">
+                		</a></li>
+             		<li><a href="mailto:maszk.ch@gmail.com" target="_blank">
+                    			<img src="media/contact/email-gold.png" alt="email" id="email">
+                		</a></li>
+ 		 </ul>
+		<ul>
 			<li><a class="active" href="#home"></a></li>
 			<li><a href="#musor">Műsor</a></li>
              		<li><a href="#tarsulat">Társulatunk</a></li>
@@ -176,7 +187,14 @@
              		<li><a href="#kapcsolat">Kapcsolat</a></li>
  		 </ul>
 	</nav>
+    </footer>
 	
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+    			<tr><td class="center"><a href="https://maszk.ch" target="_blank">Minden jog fenntartva &copy; 2023 | MASZK</a></td></tr>
+			<tr><td class="center"><a href="https://map4.me/webshop/contact/" target="_blank">Szabó Tímea | webfejlesztés, arculattervezés, grafika</a></td></tr>
+ 		</table>
+	</div>
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="center">
@@ -195,14 +213,6 @@
                 		</a>
 			    </td>
 			</tr>
- 		</table>
-	</div>
-    </footer>
-	
-	<div class="center" style="overflow-x:auto;">
-		<table class="center">
-    			<tr><td class="center"><a href="https://maszk.ch" target="_blank">Minden jog fenntartva &copy; 2023 | MASZK</a></td></tr>
-			<tr><td class="center"><a href="https://map4.me/webshop/contact/" target="_blank">Szabó Tímea | webfejlesztés, arculattervezés, grafika</a></td></tr>
  		</table>
 	</div>
 </body>
