--- a/index.html
+++ b/index.html
@@ -167,18 +167,6 @@
     
     <footer>
 	<nav>
-		<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>	
-		<ul>
-			<li><a href="https://www.facebook.com/maszk.ch/" target="_blank">
-                   			<img src="media/contact/fb-gold.png" alt="facebook" id="fb">
-        			</a></li>
-			<li><a href="https://www.instagram.com/maszk.ch/" target="_blank">
-                    			<img src="media/contact/ig-gold.png" alt="instagram" id="ig">
-                		</a></li>
-             		<li><a href="mailto:maszk.ch@gmail.com" target="_blank">
-                    			<img src="media/contact/email-gold.png" alt="email" id="email">
-                		</a></li>
- 		 </ul>
 		<ul>
 			<li><a class="active" href="#home"></a></li>
 			<li><a href="#musor">Műsor</a></li>
@@ -186,6 +174,30 @@
               		<li><a href="#tamogatok">Támogatóknak</a></li>
              		<li><a href="#kapcsolat">Kapcsolat</a></li>
  		 </ul>
+		<div class="right" style="overflow-x:auto;">
+		    <table class="center">
+			<tr><th colspan="3">
+				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
+			    </th>
+			</tr>
+    			<tr><td class="center">
+				<a href="https://www.facebook.com/maszk.ch/" target="_blank">
+                   			<img src="media/contact/fb-gold.png" alt="facebook" id="fb">
+        			</a>
+			    </td>
+			    <td class="center">
+				<a href="https://www.instagram.com/maszk.ch/" target="_blank">
+                    			<img src="media/contact/ig-gold.png" alt="instagram" id="ig">
+                		</a>
+			    </td>
+			    <td class="center">
+				<a href="mailto:maszk.ch@gmail.com" target="_blank">
+                    			<img src="media/contact/email-gold.png" alt="email" id="email">
+                		</a>
+			    </td>
+			</tr>
+ 		    </table>
+		</div>
 	</nav>
     </footer>
 	
