--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	</div>
 	
 	<div class="center" style="overflow-x:auto;">
-		<table class="center">
+		<table class="right">
     			<tr><td class="right">2023. június 16. 18:00&nbsp;</td>
 			    <td rowspan="2"><a href="https://www.facebook.com/events/174428348684282/" target="_blank">
 				Jó estét nyár, viszlát Charlotte! cukrászdabúcsúztató verses est</a></td>
@@ -175,7 +175,7 @@
              		<li><a href="#kapcsolat">Kapcsolat</a></li>
  		 </ul>
 		<div class="right" style="overflow-x:auto;">
-		    <table class="center">
+		    <table class="right">
 			<tr><th colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
 			    </th>
