--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	</div>
 	
 	<div class="center" style="overflow-x:auto;">
-		<table class="right">
+		<table class="center">
     			<tr><td class="right">2023. június 16. 18:00&nbsp;</td>
 			    <td rowspan="2"><a href="https://www.facebook.com/events/174428348684282/" target="_blank">
 				Jó estét nyár, viszlát Charlotte! cukrászdabúcsúztató verses est</a></td>
