--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section id="musor">
 	<div class="subtitle">
-            <h2>Műsoraink</h2>
+            Műsoraink
         </div>
 	
 	<div class="center" style="overflow-x:auto;">
@@ -101,7 +101,7 @@
 	
     <section id="tamogatok">
         <div class="subtitle">
-            <h2>Támogatóknak</h2>
+            Támogatóknak
         </div>
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
@@ -121,7 +121,7 @@
 
     <section id="kapcsolat">
         <div class="subtitle">
-            <h2>Kapcsolat</h2>
+            Kapcsolat
         </div>
         <div class="center"><h4>A MASZK-kal kapcsolatos kérdésekkel, ajánlatokkal <br>keresse Szabó Tímeát <a href="mailto:maszk.ch@gmail.com" target="_blank">e-mailben.</a></h4></div>
 		
