--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
 			<tr><th colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
 			    </th>
+			    <th>
+				<a href="#musor">Műsor</a><br>
+				<a href="#tarsulat">Társulatunk</a><br>
+				<a href="#tamogatok">Támogatóknak</a><br>
+				<a href="#kapcsolat">Kapcsolat</a>
+			    </th>
 			</tr>
     			<tr><td class="center">
 				<a href="https://www.facebook.com/maszk.ch/" target="_blank">
@@ -194,6 +200,8 @@
 				<a href="mailto:maszk.ch@gmail.com" target="_blank">
                     			<img src="media/contact/email-gold.png" alt="email" id="email">
                 		</a>
+			    </td>
+			    <td class="center">
 			    </td>
 			</tr>
  		    </table>
