--- a/index.html
+++ b/index.html
@@ -173,17 +173,20 @@
              		<li><a href="#tarsulat">Társulatunk</a></li>
               		<li><a href="#tamogatok">Támogatóknak</a></li>
              		<li><a href="#kapcsolat">Kapcsolat</a></li>
- 		 </ul>
+ 		</ul>
 		<div class="right" style="overflow-x:auto;">
 		    <table class="right">
 			<tr><th colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
 			    </th>
 			    <th>
-				<a href="#musor">Műsor</a><br>
-				<a href="#tarsulat">Társulatunk</a><br>
-				<a href="#tamogatok">Támogatóknak</a><br>
-				<a href="#kapcsolat">Kapcsolat</a>
+				<ul>
+					<li><a class="active" href="#home"></a></li>
+					<li><a href="#musor">Műsor</a></li>
+             				<li><a href="#tarsulat">Társulatunk</a></li>
+              				<li><a href="#tamogatok">Támogatóknak</a></li>
+             				<li><a href="#kapcsolat">Kapcsolat</a></li>
+ 				</ul>
 			    </th>
 			</tr>
     			<tr><td class="center">
