--- a/index.html
+++ b/index.html
@@ -210,6 +210,15 @@
 			</tr>
  		    </table>
 		</div>
+		<div class="left" style="overflow-x:auto;">
+		    <ul>
+			<li><a class="active" href="#home"></a></li>
+			<li><a href="#musor">Műsor</a></li>
+             		<li><a href="#tarsulat">Társulatunk</a></li>
+              		<li><a href="#tamogatok">Támogatóknak</a></li>
+             		<li><a href="#kapcsolat">Kapcsolat</a></li>
+ 		    </ul>
+		</div>
 	</nav>
     </footer>
 	
