--- a/index.html
+++ b/index.html
@@ -167,14 +167,7 @@
     
     <footer>
 	<nav>
-		<ul>
-			<li><a class="active" href="#home"></a></li>
-			<li><a href="#musor">Műsor</a></li>
-             		<li><a href="#tarsulat">Társulatunk</a></li>
-              		<li><a href="#tamogatok">Támogatóknak</a></li>
-             		<li><a href="#kapcsolat">Kapcsolat</a></li>
- 		</ul>
-		<div class="right" style="overflow-x:auto;">
+		<div class="center" style="overflow-x:auto;">
 		    <table class="right">
 			<tr><th colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
@@ -209,15 +202,6 @@
 		            <td class="center"></td>
 			</tr>
  		    </table>
-		</div>
-		<div class="left" style="overflow-x:auto;">
-		    <ul>
-			<li><a class="active" href="#home"></a></li>
-			<li><a href="#musor">Műsor</a></li>
-             		<li><a href="#tarsulat">Társulatunk</a></li>
-              		<li><a href="#tamogatok">Támogatóknak</a></li>
-             		<li><a href="#kapcsolat">Kapcsolat</a></li>
- 		    </ul>
 		</div>
 	</nav>
     </footer>
