--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 			<tr><th colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
 			    </th>
-			    <th colspan="3">
+			    <th rowspan="2">
 				<ul>
 					<li><a class="active" href="#home"></a></li>
 					<li><a href="#musor">Műsor</a></li>
@@ -197,9 +197,6 @@
                     			<img src="media/contact/email-gold.png" alt="email" id="email">
                 		</a>
 			    </td>
-			    <td class="center"></td>
-			    <td class="center"></td>
-		            <td class="center"></td>
 			</tr>
  		    </table>
 		</div>
