--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
 	<nav>
 		<div class="center" style="overflow-x:auto;">
 		    <table class="right">
-			<tr><th colspan="3">
+			<tr><td colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
-			    </th>
-			    <th rowspan="2">
+			    </td>
+			    <td rowspan="2">
 				<ul>
 					<li><a class="active" href="#home"></a></li>
 					<li><a href="#musor">Műsor</a></li>
@@ -180,7 +180,7 @@
               				<li><a href="#tamogatok">Támogatóknak</a></li>
              				<li><a href="#kapcsolat">Kapcsolat</a></li>
  				</ul>
-			    </th>
+			    </td>
 			</tr>
     			<tr><td class="center">
 				<a href="https://www.facebook.com/maszk.ch/" target="_blank">
