--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 	<nav>
 		<div class="center" style="overflow-x:auto;">
 		    <table class="right">
-			<tr><td colspan="3">
+			<tr><th colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
-			    </td>
+			    </th>
 			    <td rowspan="2">
 				<ul>
 					<li><a class="active" href="#home"></a></li>
