--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <footer>
 	<nav>
 		<div class="left" style="overflow-x:auto;">
-		    <table class="center">
+		    <table class="left">
 			<tr><th colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
 			    </th>
