--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
     
     <footer>
 	<nav>
-		<div class="left" style="overflow-x:auto;">
-		    <table class="left">
+		<div class="right" style="overflow-x:auto;">
+		    <table class="center">
 			<tr><th colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
 			    </th>
