--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     
     <footer>
 	<nav>
-		<div class="right" style="overflow-x:auto;">
+		<div class="center" style="overflow-x:auto;">
 		    <table class="center">
 			<tr><th colspan="3">
 				<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
