--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="subtitle">
             Kapcsolat
         </div>
-        <div class="center"><h4>A MASZK-kal kapcsolatos kérdésekkel, ajánlatokkal <br>keresse Szabó Tímeát <a href="mailto:maszk.ch@gmail.com" target="_blank">e-mailben.</a></h4></div>
+        <div class="text">A MASZK-kal kapcsolatos kérdésekkel, ajánlatokkal <br>keresse Szabó Tímeát <a href="mailto:maszk.ch@gmail.com" target="_blank">e-mailben.</a></div>
 		
 	
 	<div class="center" style="overflow-x:auto;">
@@ -157,11 +157,10 @@
  		</table>
 	</div>
 
-	<div class="center" style="overflow-x:auto;">
-		<table class="center">
-    			<tr><td class="center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSd47SNp3Oo64OXfRxPJXGgIG7s1KJFlty6qr7egm99-1ZyJDg/viewform?usp=sharing" target="_blank">Belépési nyilatkozat</a></td></tr>
-			<tr><td class="center"><a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten)</a></td></tr>
- 		</table>
+	<div class="text">
+    		<a href="https://docs.google.com/forms/d/e/1FAIpQLSd47SNp3Oo64OXfRxPJXGgIG7s1KJFlty6qr7egm99-1ZyJDg/viewform?usp=sharing" target="_blank">Belépési nyilatkozat</a>
+		<br>
+		<a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten)</a>
 	</div>
     </section>
     
