--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <BODY>
     <header>
 	<nav>
+		<div class="center" style="overflow-x:auto;">
 	  <table class="center">
 	     <tr><th colspan="3">
 		   <a href="#default"><img src="media/maszk.png" alt="MASZK"></a>
@@ -33,7 +34,7 @@
 			    </td>
 			</tr>
  	  </table>
-		
+		</div>
 		<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>	
 		<ul>
 			<li><a class="active" href="#home"></a></li>
