--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 	</div>
 
 	<div class="text">
-    		<a href="https://docs.google.com/forms/d/e/1FAIpQLSd47SNp3Oo64OXfRxPJXGgIG7s1KJFlty6qr7egm99-1ZyJDg/viewform?usp=sharing" target="_blank">Belépési nyilatkozat</a>
+    		<a href="https://forms.gle/H7VL66a89gjLirRCA" target="_blank">Belépési nyilatkozat</a>
 		<br>
 		<a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten)</a>
 	</div>
