--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
 	<nav>
 		<a href="#default"><img src="media/maszk.png" alt="MASZK"></a>	
+		<div class="menu">
 		<ul>
 			<li><a class="active" href="#home"></a></li>
 			<li><a href="#musor">Műsor</a></li>
@@ -19,6 +20,7 @@
               		<li><a href="#tamogatok">Támogatóknak</a></li>
              		<li><a href="#kapcsolat">Kapcsolat</a></li>
  		 </ul>
+		</div>
 	</nav>
     </header>
     <section id="musor">
