--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 			    <td class="center"><a href="https://pay.raisenow.io/phsrh" target="_blank">Twint</a></td></tr>
  		</table>
 	</div>
-        <h5 style="text-align:center">
+        <div class="text">
             Ha más módon szeretnél támogatni, elérhetőségeinket <a href="#kapcsolat">ITT</a> találod.
-        </h5>
+        </div>
     </section>
 
     <section id="kapcsolat">
