--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
  		</table>
 	</div>
         <div class="text">
-            Ha más módon szeretnél támogatni, elérhetőségeinket <a href="#kapcsolat">ITT</a> találod.
+            Ha más módon szeretnél támogatni, <br>elérhetőségeinket <a href="#kapcsolat">ITT</a> találod.
         </div>
     </section>
 
