--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				<img alt="twintes támogatás" src="media/tamogatok/twint-qr.png" width="200"></a></td>
 			</tr>
 			<tr><td class="center"><a href="#kapcsolat">Banki utalás</a></td>
-			    <td class="center"><a href="https://pay.raisenow.io/phsrh" target="_blank">Twint</a></td></tr>
+			    <td class="center"><a href="https://pay.raisenow.io/phsrh" target="_blank">TWINT</a></td></tr>
  		</table>
 	</div>
         <div class="text">
