--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
             Műsoraink
         </div>
 	
+div class="center" style="overflow-x:auto;">
+		<table class="center">
+    			<tr><td class="right">2024. február 23. 18:00&nbsp;</td>
+			    <td rowspan="2">25 órás Wass Albert felolvasó maraton</td>
+			</tr>
+     <td class="right">Zürich</td>
+			</tr>
+ 		</table>
+	</div>
+
+div class="center" style="overflow-x:auto;">
+		<table class="center">
+    			<tr><td class="right">2024. február 16. 20:00&nbsp;</td>
+			    <td rowspan="2"><a href="https://www.facebook.com/share/mA5ZTTJucM6bMUYt/" target="_blank">
+				Okuláré Projekt felolvasószínház | KÖZ</a></td>
+			</tr>
+			<tr><td class="right">Zürich</td>
+			</tr>
+ 		</table>
+	</div>
+
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="right">2023. december 9. 18:30&nbsp;</td>
