--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             Műsoraink
         </div>
 	
-div class="center" style="overflow-x:auto;">
+<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="right">2024. február 23. 18:00&nbsp;</td>
 			    <td rowspan="2">25 órás Wass Albert felolvasó maraton</td>
@@ -38,7 +38,7 @@ div class="center" style="overflow-x:auto;">
  		</table>
 	</div>
 
-div class="center" style="overflow-x:auto;">
+<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="right">2024. február 16. 20:00&nbsp;</td>
 			    <td rowspan="2"><a href="https://www.facebook.com/share/mA5ZTTJucM6bMUYt/" target="_blank">
