fixed times and locations

--- a/index.html
+++ b/index.html
@@ -30,21 +30,43 @@
 	
 <div class="center" style="overflow-x:auto;">
 		<table class="center">
-    			<tr><td class="right">2024. február 23. 18:00&nbsp;</td>
-			    <td rowspan="2">25 órás Wass Albert felolvasó maraton</td>
+			<tr><td class="right">2024. február 24. 10:00&ndash;19:00&nbsp;</td>
+			    <td rowspan="2"><a href="https://fb.me/e/4YEDDnZPh" target="_blank">
+			        Wass Albert felolvasások hétvégéje, szombat</a></td>
 			</tr>
-     <td class="right">Zürich</td>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
 			</tr>
  		</table>
 	</div>
 
 <div class="center" style="overflow-x:auto;">
 		<table class="center">
+			<tr><td class="right">2024. február 23. 18:00&ndash;23:00&nbsp;</td>
+			    <td rowspan="2"><a href="https://fb.me/e/4YEDDnZPh" target="_blank">
+			        Wass Albert felolvasások hétvégéje, péntek</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ovYgQjbS34wfqCxY8" target="_blank">
+				Quartierräume Hardau, Atelier&nbsp;<br>
+				Bullingerstrasse 63&nbsp;<br>
+				8004 Zürich&nbsp;</td>
+			</tr>
+		</table>
+	</div>
+
+<div class="center" style="overflow-x:auto;">
+		<table class="center">
     			<tr><td class="right">2024. február 16. 20:00&nbsp;</td>
-			    <td rowspan="2"><a href="https://www.facebook.com/share/mA5ZTTJucM6bMUYt/" target="_blank">
+			    <td rowspan="2"><a href="https://fb.me/e/560nlRKzR" target="_blank">
 				Okuláré Projekt felolvasószínház | KÖZ</a></td>
 			</tr>
-			<tr><td class="right">Zürich</td>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ovYgQjbS34wfqCxY8" target="_blank">
+				Quartierräume Hardau, Atelier&nbsp;<br>
+				Bullingerstrasse 63&nbsp;<br>
+				8004 Zürich&nbsp;</td>
 			</tr>
  		</table>
 	</div>
