--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 	</div>
 
 	<div class="text">
-    		<a href="https://forms.gle/H7VL66a89gjLirRCA" target="_blank">Belépési nyilatkozat</a>
+    		<a href="https://forms.gle/Yk1YFdBncd1xXrzHA" target="_blank">Belépési nyilatkozat</a>
 		<br>
 		<a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten)</a>
 	</div>
@@ -249,7 +249,7 @@
 	
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-    			<tr><td class="center"><a href="https://maszk.ch" target="_blank">Minden jog fenntartva &copy; 2023 | MASZK</a></td></tr>
+    			<tr><td class="center"><a href="https://maszk.ch" target="_blank">Minden jog fenntartva &copy; 2024 | MASZK</a></td></tr>
 			<tr><td class="center"><a href="https://map4.me/webshop/contact/" target="_blank">Szabó Tímea | webfejlesztés, arculattervezés, grafika</a></td></tr>
  		</table>
 	</div>
