added event Versünnep

--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
 
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
+			<tr><td class="right">2024. április 18. 20:00</td>
+			    <td rowspan="2"><a href="https://fb.me/e/8wQjrYqH7" target="_blank">
+			        Versünnep a magyar költészet napja alkalmából</td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/G6pG7qEgHhbod9iF8" target="_blank">
+				GZ Buchegg&nbsp;<br>
+				Bucheggstrasse 93&nbsp;<br>
+				8057 Zürich&nbsp;</td>
+			</tr>
+		</table>
+	</div>
+
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
 			<tr><td class="right">2024. február 24. 10:00&ndash;19:00&nbsp;</td>
 			    <td rowspan="2"><a href="https://fb.me/e/4YEDDnZPh" target="_blank">
 			        Wass Albert felolvasások hétvégéje, szombat</a></td>
