fixed </a> close links to locations

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				Okuláré Projekt felolvasószínház | MOST</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/vuqvsKErEvj45gGSA" target="_blank">
-				Quartierräume Bullinger&nbsp;<br>
+				Quartierräume Bullinger</a>&nbsp;<br>
 				Bullingerstrasse 9&nbsp;<br>
 				8004 Zürich&nbsp;</td>
 			</tr>
@@ -49,7 +49,7 @@
 			        Versünnep a magyar költészet napja alkalmából</td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/G6pG7qEgHhbod9iF8" target="_blank">
-				GZ Buchegg&nbsp;<br>
+				GZ Buchegg&nbsp</a>;<br>
 				Bucheggstrasse 93&nbsp;<br>
 				8057 Zürich&nbsp;</td>
 			</tr>
@@ -78,7 +78,7 @@
 			        Wass Albert felolvasások hétvégéje, péntek</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/ovYgQjbS34wfqCxY8" target="_blank">
-				Quartierräume Hardau, Atelier&nbsp;<br>
+				Quartierräume Hardau, Atelier&nbsp;</a><br>
 				Bullingerstrasse 63&nbsp;<br>
 				8004 Zürich&nbsp;</td>
 			</tr>
@@ -92,7 +92,7 @@
 				Okuláré Projekt felolvasószínház | KÖZ</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/ovYgQjbS34wfqCxY8" target="_blank">
-				Quartierräume Hardau, Atelier&nbsp;<br>
+				Quartierräume Hardau, Atelier&nbsp;</a><br>
 				Bullingerstrasse 63&nbsp;<br>
 				8004 Zürich&nbsp;</td>
 			</tr>
