fixed date and location of event Versünnep

--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
 
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-			<tr><td class="right">2024. április 18. 20:00</td>
+			<tr><td class="right">2024. április 11. 20:00</td>
 			    <td rowspan="2"><a href="https://fb.me/e/8wQjrYqH7" target="_blank">
 			        Versünnep a magyar költészet napja alkalmából</td>
 			</tr>
-			<tr><td class="right"><a href="https://maps.app.goo.gl/G6pG7qEgHhbod9iF8" target="_blank">
-				GZ Buchegg&nbsp</a>;<br>
-				Bucheggstrasse 93&nbsp;<br>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
 				8057 Zürich&nbsp;</td>
 			</tr>
 		</table>
