--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 	
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
+    			<tr><td class="right">2024. október 18. 19:00&nbsp;</td>
+			    <td rowspan="2"><a href="https://fb.me/e/6ZkOVFSpv" target="_blank">
+				Okuláré Projekt felolvasószínház | FORRÁS</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
+			</tr>
+ 		</table>
+	</div>
+
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
     			<tr><td class="right">2024. június 21. 20:00&nbsp;</td>
 			    <td rowspan="2"><a href="https://fb.me/e/5aFPLX9Ef" target="_blank">
 				Okuláré Projekt felolvasószínház | RENGETEG</a></td>
