added event Okuláré Projekt felolvasószínház | MEDITERRÁN

--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 	
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
+			<tr><td class="right">2024. december 13. 19:00&nbsp;</td>
+			    <td rowspan="2"><a href="https://fb.me/e/4eua3qsQa" target="_blank">
+				Okuláré Projekt felolvasószínház | MEDITERRÁN</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
+			</tr>
+		</table>
+	</div>
+
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
 			<tr><td class="right">2024. november 15. 19:00&nbsp;</td>
 			    <td rowspan="2"><a href="https://fb.me/e/2FMgcIkLc" target="_blank">
 				Radnóti-est</a></td>
