--- a/index.html
+++ b/index.html
@@ -27,7 +27,30 @@
 	<div class="subtitle">
             Műsoraink
         </div>
-	
+
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+			<tr><td class="right">2025. február 28&nbsp;</td>
+			    <td rowspan="2"><a href="https://fb.me/e/5UPPJFmWT" target="_blank">
+				Okuláré Projekt felolvasószínház | MI</a></td>
+			</tr>
+			<tr>
+			</tr>
+		</table>
+	</div>
+
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+			<tr><td class="right">2025. február 21-22&nbsp;</td>
+			    <td rowspan="2"><a href="https://fb.me/e/2rrCcXhuH" target="_blank">
+				Wass Albert felolvasások hétvégéje</a></td>
+			</tr>
+			<tr>
+			</tr>
+		</table>
+	</div>
+
+	    
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
 			<tr><td class="right">2024. december 13. 19:00&nbsp;</td>
@@ -240,11 +263,11 @@
 		<table class="center">
 			<tr><td class="center"><a href="#kapcsolat">
 				<img alt="banki utalás" src="media/tamogatok/bank-qr.png" width="200"></a></td>
-			    <td class="center"><a href="https://pay.raisenow.io/phsrh" target="_blank">
-				<img alt="twintes támogatás" src="media/tamogatok/twint-qr.png" width="200"></a></td>
+			    <td class="center"><a href="https://donate.raisenow.io/dxxyp" target="_blank">
+				<img alt="twintes támogatás" src="media/tamogatok/twint-web.png" width="200"></a></td>
 			</tr>
-			<tr><td class="center"><a href="#kapcsolat">Banki utalás</a></td>
-			    <td class="center"><a href="https://pay.raisenow.io/phsrh" target="_blank">TWINT</a></td></tr>
+			<tr><td class="center"><a href="#kapcsolat">Netbankos utalás</a></td>
+			    <td class="center"><a href="https://donate.raisenow.io/dxxyp" target="_blank">TWINT</a></td></tr>
 		</table>
 	</div>
         <div class="text">
