--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-			<tr><td class="right">2025. február 28&nbsp;</td>
+			<tr><td class="right">2025. február 28. 19:00&nbsp;</td>
 			    <td rowspan="2"><a href="https://fb.me/e/5UPPJFmWT" target="_blank">
 				Okuláré Projekt felolvasószínház | MI</a></td>
 			</tr>
@@ -41,7 +41,7 @@
 
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-			<tr><td class="right">2025. február 21-22&nbsp;</td>
+			<tr><td class="right">2025. február 21–22&nbsp;</td>
 			    <td rowspan="2"><a href="https://fb.me/e/2rrCcXhuH" target="_blank">
 				Wass Albert felolvasások hétvégéje</a></td>
 			</tr>
