--- a/index.html
+++ b/index.html
@@ -28,13 +28,47 @@
             Műsoraink
         </div>
 
+
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+			<tr><td class="right">2025. április 11. 19:00</td>
+			    <td rowspan="2"><a href="https://fb.me/e/7i3naWJeg" target="_blank">
+			        A magyar költészet napja | József Attila 120 | Márai Sándor 125</td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
+			</tr>
+		</table>
+	</div>
+	    
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+			<tr><td class="right">2025. április 6. 19:00&nbsp;</td>
+			    <td rowspan="2"><a href="https://fb.me/e/5z9aUW9h6" target="_blank">
+				Okuláré Projekt felolvasószínház | ZÖLD</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/4ife9PuxrY8BYy798" target="_blank">
+				Gemeinschaftszentrum Freienbach&nbsp;</a><br>
+				Kirchstrasse 48, Bühnensaal&nbsp;<br>
+				8807 Freienbach&nbsp;</td>
+			</tr>
+		</table>
+	</div>
+	    
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
 			<tr><td class="right">2025. február 28. 19:00&nbsp;</td>
 			    <td rowspan="2"><a href="https://fb.me/e/5UPPJFmWT" target="_blank">
 				Okuláré Projekt felolvasószínház | MI</a></td>
 			</tr>
-			<tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
 			</tr>
 		</table>
 	</div>
@@ -45,7 +79,11 @@
 			    <td rowspan="2"><a href="https://fb.me/e/2rrCcXhuH" target="_blank">
 				Wass Albert felolvasások hétvégéje</a></td>
 			</tr>
-			<tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
 			</tr>
 		</table>
 	</div>
