--- a/index.html
+++ b/index.html
@@ -29,6 +29,36 @@
         </div>
 
 
+
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+			<tr><td class="right">2025. június 20. 19:00&nbsp;</td>
+			    <td rowspan="2"><a href="https://fb.me/e/5HCXuHSuU" target="_blank">
+				Okuláré Projekt felolvasószínház | ÉG</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
+			</tr>
+		</table>
+	</div>
+
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+			<tr><td class="right">2025. május 7. 18:00&nbsp;</td>
+			    <td rowspan="2"><a href="https://fb.me/e/6ogATsFrg" target="_blank">
+				Beugró társasjáték-est</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
+			</tr>
+		</table>
+	</div>
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
 			<tr><td class="right">2025. április 11. 19:00</td>
@@ -345,8 +375,8 @@
 		<table class="center">
 			<tr><th colspan="2">Elnökség</th></tr>
 			<tr><td class="right">Elnök&colon;&nbsp;</td><td>Szabó Tímea</td></tr>
-			<tr><td class="right">Alelnök&colon;&nbsp;</td><td>Huterják-Szűcs Dóra</td></tr>
-			<tr><td class="right">Titkár&colon;&nbsp;</td><td>Livia da Costa Alves</td></tr>
+			<tr><td class="right">Alelnök&colon;&nbsp;</td><td></td></tr>
+			<tr><td class="right">Titkár&colon;&nbsp;</td><td>Lipcsei Ferenc</td></tr>
 			<tr><td class="right">Pénztáros&colon;&nbsp;</td><td>Somogyvári Kristóf</td></tr>
 		</table>
 	</div>
@@ -398,7 +428,7 @@
 	
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-			<tr><td class="center"><a href="https://maszk.ch" target="_blank">Minden jog fenntartva &copy; 2024 | MASZK</a></td></tr>
+			<tr><td class="center"><a href="https://maszk.ch" target="_blank">Minden jog fenntartva &copy; 2023-2025 | MASZK</a></td></tr>
 			<tr><td class="center"><a href="https://map4.me/webshop/contact/" target="_blank">Szabó Tímea | webfejlesztés, arculattervezés, grafika</a></td></tr>
 		</table>
 	</div>
