--- a/index.html
+++ b/index.html
@@ -382,6 +382,8 @@
 	</div>
 
 	<div class="text">
+		<a href="https://www.uid.admin.ch/Detail.aspx?uid_id=CHE-355.562.680" target="_blank">UID: CHE-355.562.680</a>
+		<br>
 		<a href="https://forms.gle/Yk1YFdBncd1xXrzHA" target="_blank">Belépési nyilatkozat</a>
 		<br>
 		<a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten)</a>
